<resources>
    <string name="app_name">MT File Manager</string>
    <string name="nav_files">Files</string>
    <string name="nav_history">History</string>
    <string name="nav_tools">Tools</string>
    <string name="nav_apk_viewer">APK Tools</string>
    <string name="path_bar_create_new">Create New</string>
    <string name="path_bar_sort">Sort</string>
    <string name="path_bar_filter">Filter</string>
    <string name="path_bar_create_title">Create New</string>
    <string name="path_bar_filter_title">Filter</string>
    <string name="path_bar_filter_hidden">Show Hidden Files</string>
    <string name="path_bar_filter_apk">APK Files Only</string>
    <string name="path_bar_filter_image">Image Files Only</string>
    <string name="path_bar_filter_video">Video Files Only</string>
    <string name="path_bar_filter_audio">Audio Files Only</string>
    <string name="path_bar_filter_document">Document Files Only</string>
    <string name="path_bar_filter_archive">Archive Files Only</string>
    <string name="path_bar_filter_all">All Files</string>
    <string name="action_copy">Copy</string>
    <string name="action_cut">Cut</string>
    <string name="action_paste">Paste</string>
    <string name="action_paste_here">Paste</string>
    <string name="action_move_to_panel">Move to %1$s</string>
    <string name="action_rename">Rename</string>
    <string name="action_delete">Delete</string>
    <string name="action_properties">Properties</string>
    <string name="action_select_all">Select All</string>
    <string name="action_new_folder">New Folder</string>
    <string name="action_new_file">New File</string>
    <string name="action_compress">Compress</string>
    <string name="action_extract">Extract Here</string>
    <string name="action_bookmark">Add Bookmark</string>
    <string name="action_open">Open</string>
    <string name="action_edit">Edit</string>
    <string name="action_share">Share</string>
    <string name="action_info">Info</string>
    <string name="apk_info">APK Info</string>
    <string name="apk_manifest">Manifest</string>
    <string name="apk_permissions">Permissions</string>
    <string name="apk_certificates">Certificates</string>
    <string name="apk_files">Files</string>
    <string name="apk_sign_apk">Sign APK</string>
    <string name="apk_extract_all">Extract All</string>
    <string name="apk_package_name">Package Name</string>
    <string name="apk_version_name">Version Name</string>
    <string name="apk_version_code">Version Code</string>
    <string name="apk_min_sdk">Min SDK</string>
    <string name="apk_target_sdk">Target SDK</string>
    <string name="apk_install_location">Install Location</string>
    <string name="apk_debuggable">Debuggable</string>
    <string name="apk_shared_user_id">Shared User ID</string>
    <string name="apk_file_size">File Size</string>
    <string name="apk_file_path">File Path</string>
    <string name="apk_app_name">App Name</string>
    <string name="apk_features">Features</string>
    <string name="cert_issuer">Issuer</string>
    <string name="cert_subject">Subject</string>
    <string name="cert_valid_from">Valid From</string>
    <string name="cert_valid_to">Valid To</string>
    <string name="cert_serial_number">Serial Number</string>
    <string name="cert_algorithm">Signature Algorithm</string>
    <string name="cert_sha256">SHA-256 Fingerprint</string>
    <string name="cert_md5">MD5 Fingerprint</string>
    <string name="cert_sha1">SHA-1 Fingerprint</string>
    <string name="title_text_editor">Text Editor</string>
    <string name="title_hex_editor">Hex Editor</string>
    <string name="action_save">Save</string>
    <string name="action_find">Find</string>
    <string name="action_replace">Replace</string>
    <string name="action_undo">Undo</string>
    <string name="action_redo">Redo</string>
    <string name="action_go_to_line">Go to Line</string>
    <string name="action_word_wrap">Word Wrap</string>
    <string name="action_encoding">Encoding</string>
    <string name="action_go_to_address">Go to Address</string>
    <string name="find_hint">Find</string>
    <string name="replace_hint">Replace with</string>
    <string name="line_count">Lines: %1$d</string>
    <string name="column_position">Col: %1$d</string>
    <string name="encoding_info">UTF-8</string>
    <string name="current_offset">Offset: 0x%1$08X</string>
    <string name="bytes_count">Bytes: %1$d</string>
    <string name="title_settings">Settings</string>
    <string name="settings_appearance">Appearance</string>
    <string name="settings_general">General</string>
    <string name="settings_about">About</string>
    <string name="settings_dark_mode">Dark Mode</string>
    <string name="settings_dark_mode_desc">Enable dark theme</string>
    <string name="settings_show_hidden_files">Show Hidden Files</string>
    <string name="settings_show_hidden_files_desc">Display files and folders starting with a dot</string>
    <string name="settings_sort_by">Sort By</string>
    <string name="settings_sort_by_desc">Default file sorting method</string>
    <string name="settings_default_home">Default Home</string>
    <string name="settings_default_home_desc">Default home directory on launch</string>
    <string name="settings_accent_color">Accent Color</string>
    <string name="settings_accent_color_desc">Choose the app accent color</string>
    <string name="settings_dual_panel">Dual Panel Mode</string>
    <string name="settings_dual_panel_desc">Enable dual panel file browser</string>
    <string name="dialog_confirm">Confirm</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_enter_name">Enter name</string>
    <string name="dialog_are_you_sure">Are you sure?</string>
    <string name="dialog_file_name">File name</string>
    <string name="dialog_new_folder_name">New folder name</string>
    <string name="dialog_delete_title">Delete</string>
    <string name="dialog_delete_message">Are you sure you want to delete \"%1$s\"?</string>
    <string name="dialog_rename_title">Rename</string>
    <string name="dialog_new_folder_title">New Folder</string>
    <string name="dialog_new_file_title">New File</string>
    <string name="dialog_compress_title">Compress</string>
    <string name="dialog_compress_message">Enter archive name</string>
    <string name="dialog_extract_title">Extract</string>
    <string name="dialog_extract_message">Select destination folder</string>
    <string name="dialog_properties_title">Properties</string>
    <string name="dialog_sort_title">Sort By</string>
    <string name="dialog_find_title">Find</string>
    <string name="dialog_find_replace_title">Find &amp; Replace</string>
    <string name="dialog_go_to_line_title">Go to Line</string>
    <string name="dialog_go_to_address_title">Go to Address</string>
    <string name="dialog_permission_rationale_title">Permission Required</string>
    <string name="dialog_permission_rationale_message">Storage permission is required to browse files. Please grant the permission to continue.</string>
    <string name="info_name">Name</string>
    <string name="info_size">Size</string>
    <string name="info_type">Type</string>
    <string name="info_modified">Modified</string>
    <string name="info_permissions">Permissions</string>
    <string name="info_path">Path</string>
    <string name="info_can_read">Read</string>
    <string name="info_can_write">Write</string>
    <string name="info_can_execute">Execute</string>
    <string name="info_contains">%1$d items</string>
    <string name="info_directory">Directory</string>
    <string name="info_file">File</string>
    <string name="sort_name">Name</string>
    <string name="sort_size">Size</string>
    <string name="sort_date">Date</string>
    <string name="sort_type">Type</string>
    <string name="sort_ascending">Ascending</string>
    <string name="sort_descending">Descending</string>
    <string name="error_permission_denied">Permission denied</string>
    <string name="error_file_not_found">File not found</string>
    <string name="error_failed_to_create">Failed to create</string>
    <string name="error_failed_to_delete">Failed to delete</string>
    <string name="error_failed_to_rename">Failed to rename</string>
    <string name="error_failed_to_copy">Failed to copy</string>
    <string name="error_failed_to_move">Failed to move</string>
    <string name="error_failed_to_extract">Failed to extract</string>
    <string name="error_failed_to_compress">Failed to compress</string>
    <string name="error_already_exists">%1$s already exists</string>
    <string name="error_empty_name">Name cannot be empty</string>
    <string name="error_invalid_name">Invalid file name</string>
    <string name="error_not_apk_file">Not a valid APK file</string>
    <string name="error_cannot_open_file">Cannot open file</string>
    <string name="error_unable_to_read">Unable to read file</string>
    <string name="search">Search</string>
    <string name="search_hint">Search files…</string>
    <string name="empty_folder">Empty folder</string>
    <string name="loading">Loading…</string>
    <string name="items">%1$d items</string>
    <string name="selected">%1$d selected</string>
    <string name="no_selection">No selection</string>
    <string name="home">Home</string>
    <string name="back">Back</string>
    <string name="refresh">Refresh</string>
    <string name="up">Up</string>
    <string name="more_options">More options</string>
    <string name="file_saved">File saved</string>
    <string name="file_not_saved">File not saved</string>
    <string name="copied">%1$d items copied</string>
    <string name="cut">%1$d items cut</string>
    <string name="pasted">%1$d items pasted</string>
    <string name="deleted">%1$s deleted</string>
    <string name="renamed">Renamed to %1$s</string>
    <string name="created">%1$s created</string>
    <string name="extracted">Extracted to %1$s</string>
    <string name="compressed">Compressed to %1$s</string>
    <string name="no_permissions">No permissions required</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="add_bookmark">Add bookmark</string>
    <string name="remove_bookmark">Remove bookmark</string>
    <string name="bookmark_added">Bookmark added</string>
    <string name="bookmark_removed">Bookmark removed</string>
    <string name="no_bookmarks">No bookmarks</string>
    <string name="manage_bookmarks">Manage Bookmarks</string>
    <string name="about_version">Version %1$s</string>
    <string name="about_description">A powerful native Android file manager with APK analysis tools.</string>
    <string name="about_github">GitHub</string>
    <string name="about_license">License</string>
    <string name="permission_read_storage_desc">Read files from storage</string>
    <string name="permission_write_storage_desc">Write files to storage</string>
    <string name="permission_manage_storage_desc">Full access to all files on device</string>
    <string name="file_type_apk">Android Package</string>
    <string name="file_type_image">Image File</string>
    <string name="file_type_video">Video File</string>
    <string name="file_type_audio">Audio File</string>
    <string name="file_type_text">Text File</string>
    <string name="drawer_home">Home</string>
    <string name="drawer_downloads">Downloads</string>
    <string name="drawer_images">Images</string>
    <string name="drawer_videos">Videos</string>
    <string name="drawer_music">Music</string>
    <string name="drawer_documents">Documents</string>
    <string name="drawer_apk_tools">APK Tools</string>
    <string name="log_title">Logs</string>
    <string name="log_copy_summary">Copy Summary</string>
    <string name="log_view_full">View All Logs</string>
    <string name="log_empty">No diagnostic logs yet. Use the file manager to generate logs.</string>
</resources>