<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_open"
        android:title="@string/action_open"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_edit"
        android:title="@string/action_edit"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_copy"
        android:title="@string/action_copy"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_cut"
        android:title="@string/action_cut"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_rename"
        android:title="@string/action_rename"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete"
        android:title="@string/action_delete"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_bookmark"
        android:title="@string/action_bookmark"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_properties"
        android:title="@string/action_properties"
        app:showAsAction="never" />

</menu>
