<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/spacing_lg">

    <RadioGroup
        android:id="@+id/radioGroupSort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_md">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rbSortName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sort_name"
            android:checked="true" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rbSortSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sort_size" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rbSortDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sort_date" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rbSortType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sort_type" />

    </RadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider_color"
        android:layout_marginBottom="@dimen/spacing_md" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/cbAscending"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sort_ascending"
        android:checked="true" />

</LinearLayout>
