<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/spacing_lg">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvDialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_are_you_sure"
        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
        android:textColor="@color/md_theme_on_surface"
        android:layout_marginBottom="@dimen/spacing_md" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvDialogMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
        android:textColor="@color/md_theme_on_surface_variant"
        android:layout_marginBottom="@dimen/spacing_lg" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_confirm"
        android:layout_marginBottom="@dimen/spacing_sm" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCancel"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_cancel" />

</LinearLayout>
